--- a/.env.development
+++ b/.env.development
@@ -2,16 +2,15 @@
 NODE_ENV = 'development'
 
 # 本地环境接口地址(/api/index.ts文件中使用)
-VITE_API_URL = '/api'
+VITE_TEST_API_URL = '/api'
 
 # 应用接口地址
-VITE_APP_API_URL = 'https://localhost:7238/api'
+VITE_API_URL = 'https://localhost:7238/api'
 
-# SSO接口地址
-VITE_SSO_API_URL = 'https://localhost:44310'
-VITE_GRANT_TYPE = 'password'
-VITE_CLIENT_ID = 'erp_identity_admin_api'
-VITE_CLIENT_SECRET = '0D39A529BCA3487C1DA5615B52E2FE22'
+# identity接口地址
+VITE_IDENTITYSERVER_APP_URL = 'https://localhost:55208'
+VITE_GRANT_TYPE = 'code'
+VITE_CLIENT_ID = 'hejing-ui'
 
-# UUMS接口地址
-VITE_UUMS_API_URL = 'https://localhost:44302'
+# common接口地址
+VITE_COMMONSERVER_API_URL = 'https://localhost:55212'
