--- a/.env.production
+++ b/.env.production
@@ -2,16 +2,15 @@
 NODE_ENV = "production"
 
 # 线上环境接口地址(easymock)
-VITE_API_URL = "https://mock.mengxuegu.com/mock/629d727e6163854a32e8307e"
+VITE_TEST_API_URL = "https://mock.mengxuegu.com/mock/629d727e6163854a32e8307e"
 
 # 应用接口地址
-VITE_MAGIC_TEXT_API_URL = 'https://shanyang.fun/magictext-api/api'
+VITE_API_URL = 'https://changli-api.nanrong.store'
 
-# SSO接口地址
-VITE_SSO_API_URL = 'https://sso.shanyang.fun'
-VITE_GRANT_TYPE = 'password'
-VITE_CLIENT_ID = 'ultranuke_magictext_api'
-VITE_CLIENT_SECRET = '0D39A529BCA3487C1DA5615B52E2FE22'
+# identity接口地址
+VITE_IDENTITYSERVER_APP_URL = 'https://identity.nanrong.store'
+VITE_GRANT_TYPE = 'code'
+VITE_CLIENT_ID = 'changli-ui'
 
-# UUMS接口地址
-VITE_UUMS_API_URL = 'https://shanyang.fun/admin-api'
+# common接口地址
+VITE_COMMONSERVER_API_URL = 'https://commonserver-api.nanrong.store'
