--- a/.env.test
+++ b/.env.test
@@ -2,10 +2,10 @@
 NODE_ENV = "test"
 
 # 测试环境接口地址(fastmock)
-VITE_API_URL = "https://www.fastmock.site/mock/f81e8333c1a9276214bcdbc170d9e0a0"
+VITE_TEST_API_URL = "https://www.fastmock.site/mock/f81e8333c1a9276214bcdbc170d9e0a0"
 
 # 应用接口地址
-VITE_MAGIC_TEXT_API_URL = 'https://shanyang.fun:6052/api'
+VITE_API_URL = 'https://shanyang.fun:6052/api'
 
 # SSO接口地址
 VITE_SSO_API_URL = 'https://localhost:44310'
