--- a/.env.development
+++ b/.env.development
@@ -5,12 +5,15 @@ NODE_ENV = 'development'
 VITE_TEST_API_URL = '/api'
 
 # 应用接口地址
-VITE_API_URL = 'https://localhost:7238/api'
+VITE_APP_API_URL = 'https://localhost:55214'
+
+# 当前前端地址
+VITE_APP_URL = 'http://localhost:3305'
 
 # identity接口地址
 VITE_IDENTITYSERVER_APP_URL = 'https://localhost:55208'
 VITE_GRANT_TYPE = 'code'
-VITE_CLIENT_ID = 'hejing-ui'
+VITE_CLIENT_ID = 'changli-ui'
 
 # common接口地址
 VITE_COMMONSERVER_API_URL = 'https://localhost:55212'
