--- a/.env.production
+++ b/.env.production
@@ -5,7 +5,10 @@ NODE_ENV = "production"
 VITE_TEST_API_URL = "https://mock.mengxuegu.com/mock/629d727e6163854a32e8307e"
 
 # 应用接口地址
-VITE_API_URL = 'https://changli-api.nanrong.store'
+VITE_APP_API_URL = 'https://changli-api.nanrong.store'
+
+# 当前前端地址
+VITE_APP_URL = 'https://changli-ui.nanrong.store'
 
 # identity接口地址
 VITE_IDENTITYSERVER_APP_URL = 'https://identity.nanrong.store'
