--- a/.env.test
+++ b/.env.test
@@ -5,13 +5,15 @@ NODE_ENV = "test"
 VITE_TEST_API_URL = "https://www.fastmock.site/mock/f81e8333c1a9276214bcdbc170d9e0a0"
 
 # 应用接口地址
-VITE_API_URL = 'https://shanyang.fun:6052/api'
+VITE_APP_API_URL = 'https://localhost:7238'
 
-# SSO接口地址
-VITE_SSO_API_URL = 'https://localhost:44310'
-VITE_GRANT_TYPE = 'password'
-VITE_CLIENT_ID = 'ultranuke_magictext_api'
-VITE_CLIENT_SECRET = '0D39A529BCA3487C1DA5615B52E2FE22'
+# 当前前端地址
+VITE_APP_URL = 'http://localhost:3306'
 
-# UUMS接口地址
-VITE_UUMS_API_URL = 'https://localhost:44302'
+# identity接口地址
+VITE_IDENTITYSERVER_APP_URL = 'https://localhost:55208'
+VITE_GRANT_TYPE = 'code'
+VITE_CLIENT_ID = 'changli-ui'
+
+# common接口地址
+VITE_COMMONSERVER_API_URL = 'https://localhost:55212'
