--- a/.env.production
+++ b/.env.production
@@ -22,7 +22,7 @@ VITE_DROP_CONSOLE = true
 VITE_PWA = true
 
 # 当前前端地址
-VITE_APP_URL = 'https://hejing-ui.nanrong.store'
+VITE_APP_URL = 'https://changli-ui.nanrong.store'
 
 # identity接口地址
 VITE_IDENTITYSERVER_APP_URL = 'https://identity.nanrong.store'
