--- a/.env.development
+++ b/.env.development
@@ -6,7 +6,7 @@ VITE_PUBLIC_PATH = /
 
 # 路由模式
 # Optional: hash | history
-VITE_ROUTER_MODE = hash
+VITE_ROUTER_MODE = history
 
 # 打包时是否删除 console
 VITE_DROP_CONSOLE = true
